Feat: web components logic

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Components</title>
+    <script defer src="product.js"></script>
+    <script defer src="todoList.js"></script>
 </head>
 <body>
     Si
+    <product-item name="lorem" price="ipsum" discount_price="ipsum*0,3" discount="30%" rating="4"></product-item>
+    <todo-list></todo-list>
 </body>
 </html>
