--- a/index.html
+++ b/index.html
@@ -9,37 +9,30 @@
   <script type="module" defer src="./litComponents/litProduct.js"></script>
   <script type="module" defer src="./litComponents/litTodoList.js"></script>
   <link rel="stylesheet" href="style.css">
-
 </head>
+
 <body>
   <h1>WebComponents</h1>
-  <h2>Soy un H2 mirenme cambiar de color 🔥 😊🤣❤️😍😒</h2> 
-  <button id="colorButton">Cambiar Color</button>
   <div class="products">
-    <product-item name="Apple MacBook Pro 16 M3 Pro" image="./assets/mac.jpg" price="9.990" discount="0.3" rating="4"></product-item>
-    <product-item name="Apple MacBook Pro 16 M3 Pro" image="./assets/mac.jpg" price="9.990" discount="0.3" rating="4"></product-item>
-    <lit-product name="Apple MacBook Pro 16 M3 Pro" image="./assets/mac.jpg" price="9.990" discount="0.3" rating="4"></lit-product>
+    <product-item name="Apple MacBook Pro 16 M3 Pro" image="./assets/mac.jpg" price="739.990" discount="0.2" rating="4.9"></product-item>
+    <lit-product name="Apple iPhone 14 Pro Max" image="./assets/iphone.webp" price="1.897.990" discount="0.1" rating="4"></lit-product>
+    <product-item name="Pokemon Platinum Version" image="./assets/pokemon.webp" price="19.990" discount="0.5" rating="4.8"></product-item>
+    <lit-product name="The Legend of Zelda: Ocarina of Time" image="./assets/zelda.webp" price="30.990" discount="0.7" rating="5"></lit-product>
   </div>
-  <div class="todo-list">
-    <todo-list></todo-list>
-    <lit-todo-list></lit-todo-list>
+  <div class="todo-list-box">
+    <todo-list listName="ToDo List con Web Components" prompt="Agregar nueva tarea" firstItem="Primer Item" secondItem="Segundo Item" thirdItem="Tercer Item"></todo-list>
+    <lit-todo-list listName="ToDo List con Lit Web Components" prompt="Agregar una tareilla" firstItem="Prrrrrimero" secondItem="Seeeeeegundo" thirdItem="t e r c e r o"></lit-todo-list>
   </div>
 
-    <script>
-      document.getElementById('colorButton').addEventListener('click', function () {
-        console.log('Changing colors');
-        var headers = document.querySelectorAll('h2');
-        var colors = ['red', 'blue', 'green', 'purple', 'orange', 'pink'];
+  <h2>Soy un H2 mirenme cambiar de color 🔥 😊🤣❤️😍😒</h2> 
+  <button id="color-button">Cambiar Color</button>
 
-        headers.forEach(function (header) {
-          var currentColor = header.style.color;
-          var newColor = colors[Math.floor(Math.random() * colors.length)];
-          while (newColor === currentColor) {
-            newColor = colors[Math.floor(Math.random() * colors.length)];
-          }
-          header.style.color = newColor;
-        });
-      });
-    </script>
+  <p> Esto es un párrafo y cambio de tamaño 😱😱😱</p>
+  <button id="p-button">Cambiar tamaño</button>
+
+  <p id="non-changing-p">Este párrafo no cambiaría si estuviese encapsulado</p>
+
+  <script src="./encapsulation.js"></script>
 </body>
+
 </html>
